# fast_api

./: Dockerfile  Makefile  alembic.ini  docker-compose.yml  pyproject.toml
migrations/: env.py
migrations/versions/: 72b46cc08ac5_game_and_company_models.py  8443d5349e2b_models.py  8f08650a7df8_purchase_model.py  9a15333bbee4_image_model.py  9ae2d53a19bb_new_token_model.py  b4373f93c5a2_user_auth_model.py  cc0571431f21_correction_game_model.py  d473e4dfca87_token_model.py  f7bd61b23b2d_.py
migrations/versions_bkp/: 70f64cb99932_game_model.py  f0dc6d6eeba6_announcement_model.py
src/: main.py
src/db/: session.py
src/models/: __init__.py  announcement.py  company.py  game.py  image.py  purchase.py  token.py  user.py
src/repository/: announcement.py  company.py  game.py  image.py  purchase.py  user.py
src/routes/: announcement.py  company.py  game.py  image.py  purchase.py  user.py
src/schemas/: announcement.py  company.py  game.py  purchase.py  token.py  user.py
src/services/: announcement.py  auth.py  company.py  game.py  image.py  pixqrcodegen.py  purchase.py  user.py
tests/: env_test.py
